Add comment typing function

--- a/ICT311Task2ByKim_Donghyun_1098130/app/src/main/res/values/strings.xml
+++ b/ICT311Task2ByKim_Donghyun_1098130/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="delete_crime">Delete the Crime</string>
     <string name="helpbutton">help button for user</string>
     <string name="GetLocation">GetLocation</string>
+    <string name="Comment">Type the comment</string>
 
 </resources>
